--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -3,10 +3,10 @@ project:
   output-dir: ../docs
 
 website:
-  title: "Template talk"
+  title: "The future of (open) human neuroscience"
   navbar:
     left:
-      - href: https://github.com/poldrack/talks-template
+      - href: http://poldrack.github.io/talks-FutureOpenNeuroscience
         text: Github page
 
 format:
